--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -1,8 +1,9 @@
 $black: black;
 $white: white;
 
-$breakpoint-tablet: 800px;
-$breakpoint-phone: 600px;
+$breakpoint-tablet: 50rem;
+$breakpoint-phone: 38rem;
+$breakpoint-large-screen: 100rem;
 
 
 
