--- a/css/main.css
+++ b/css/main.css
@@ -33,9 +33,15 @@ section {
   margin: 0 10vw 0 10vw;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 50rem) {
   section {
     margin: 0 5vw 0 5vw;
+  }
+}
+@media screen and (min-width: 100rem) {
+  section {
+    margin: 0 auto 0 auto;
+    width: 80rem;
   }
 }
 h2 {
@@ -122,7 +128,7 @@ header nav button {
   font-style: italic;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 50rem) {
   header nav {
     justify-content: end;
   }
@@ -131,6 +137,24 @@ header nav button {
   }
   header nav button {
     display: unset;
+  }
+}
+footer {
+  border-top: 1px solid black;
+}
+footer p {
+  margin: 1rem 0 1rem;
+  text-align: center;
+}
+
+@media screen and (max-width: 38rem) {
+  footer p {
+    margin: 0.75rem 0 0.75rem;
+    font-family: "Raleway", sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    color: black;
+    line-height: normal;
   }
 }
 #hero {
@@ -171,7 +195,7 @@ header nav button {
   width: 2rem;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 50rem) {
   #hero {
     flex-direction: column;
   }
@@ -255,7 +279,7 @@ header nav button {
   line-height: normal;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 50rem) {
   #photos {
     gap: 1rem;
   }
@@ -263,7 +287,7 @@ header nav button {
     gap: 1rem;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 38rem) {
   #photos {
     gap: 1rem;
   }
@@ -323,7 +347,7 @@ header nav button {
   line-height: normal;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 50rem) {
   #projects {
     gap: 1rem;
   }
@@ -331,7 +355,7 @@ header nav button {
     gap: 1rem;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 38rem) {
   #projects {
     gap: 1rem;
   }
@@ -341,5 +365,78 @@ header nav button {
   }
   #projects .container div {
     flex-grow: 1 !important;
+  }
+}
+#contact {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  border-bottom: 1px solid black;
+}
+#contact a {
+  display: flex;
+  align-items: center;
+  padding-left: 2rem;
+  border-top: 1px solid black;
+  text-decoration: unset;
+  font-family: "Raleway", sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  color: black;
+  line-height: normal;
+}
+#contact span {
+  margin-right: 3rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 96px;
+  font-weight: 100;
+  color: black;
+  line-height: normal;
+}
+#contact img {
+  margin-left: 3rem;
+}
+
+@media screen and (max-width: 50rem) {
+  #contact span {
+    margin-right: 2.5rem;
+    font-family: "Raleway", sans-serif;
+    font-size: 80px;
+    font-weight: 100;
+    color: black;
+    line-height: normal;
+  }
+  #contact a {
+    padding-left: 2rem;
+    font-family: "Raleway", sans-serif;
+    font-size: 26px;
+    font-weight: 400;
+    color: black;
+    line-height: normal;
+  }
+  #contact img {
+    margin-left: 2.5rem;
+    scale: 0.9;
+  }
+}
+@media screen and (max-width: 38rem) {
+  #contact span {
+    margin-right: 2rem;
+    font-family: "Raleway", sans-serif;
+    font-size: 64px;
+    font-weight: 100;
+    color: black;
+    line-height: normal;
+  }
+  #contact a {
+    padding-left: 1.5rem;
+    font-family: "Raleway", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    color: black;
+    line-height: normal;
+  }
+  #contact img {
+    margin-left: 2rem;
+    scale: 0.8;
   }
 }/*# sourceMappingURL=main.css.map */
