--- a/css/main.scss
+++ b/css/main.scss
@@ -3,8 +3,10 @@
 
 @import 'scss/general';
 @import 'scss/header';
+@import 'scss/footer';
 
 @import 'scss/homepage/hero';
 @import 'scss/homepage/about';
 @import 'scss/homepage/photos';
 @import 'scss/homepage/projects';
+@import 'scss/homepage/contact';
