--- a/css/scss/_general.scss
+++ b/css/scss/_general.scss
@@ -12,6 +12,12 @@ section {
         margin: 0 5vw 0 5vw;
     }
 }
+@media screen and (min-width: $breakpoint-large-screen) {
+    section {
+        margin: 0 auto 0 auto;
+        width: 80rem;
+    }
+}
 
 
 h2 {
