--- a/css/main.scss
+++ b/css/main.scss
@@ -10,3 +10,7 @@
 @import 'scss/homepage/photos';
 @import 'scss/homepage/projects';
 @import 'scss/homepage/contact';
+
+@import 'scss/projects/general';
+
+@import 'scss/projects/firstMotion';
