--- a/css/main.css
+++ b/css/main.css
@@ -439,4 +439,228 @@ footer p {
     margin-left: 2rem;
     scale: 0.8;
   }
+}
+#project-page-title h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 64px;
+  font-weight: 700;
+  color: black;
+  line-height: normal;
+  margin: 4rem 0 1rem;
+}
+
+#all-projects {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding: 2rem 0 10rem;
+}
+#all-projects .project {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+#all-projects .project .background-image {
+  width: 25rem;
+  height: 15rem;
+  border-radius: 2rem;
+}
+#all-projects .project .text .title {
+  font-family: "Raleway", sans-serif;
+  font-size: 40px;
+  font-weight: 600;
+  color: black;
+  line-height: normal;
+  margin-bottom: 0.5rem;
+}
+#all-projects .project .text .text {
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  color: black;
+  line-height: normal;
+}
+#all-projects a {
+  text-decoration: unset;
+}
+#all-projects .backToHome {
+  border: 1px solid black;
+  border-radius: 100px;
+  padding: 0.5rem 2rem 0.5rem 2rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-decoration: unset;
+}
+
+@media screen and (max-width: 50rem) {
+  #project-page-title h1 {
+    margin-top: 2rem;
+  }
+  #all-projects {
+    gap: 2.5rem;
+  }
+  #all-projects .project {
+    gap: 2rem;
+  }
+}
+@media screen and (max-width: 38rem) {
+  #project-page-title h1 {
+    font-size: 48px;
+    margin: 1rem 0 0.5rem;
+  }
+  #all-projects {
+    gap: 3rem;
+    padding-bottom: 6rem;
+  }
+  #all-projects .project {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  #all-projects .project .background-image {
+    width: 100%;
+    height: 14rem;
+  }
+  #all-projects .project .text {
+    width: 100%;
+  }
+  #all-projects .project .text .title {
+    font-family: "Raleway", sans-serif;
+    font-size: 26px;
+    font-weight: 600;
+    color: black;
+    line-height: normal;
+    margin-bottom: 0.25rem;
+    padding-left: 0.5rem;
+  }
+  #all-projects .project .text .text {
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    line-height: normal;
+    padding-left: 0.5rem;
+  }
+  #all-projects .backToHome {
+    align-self: center;
+  }
+}
+@media screen and (min-width: 448px) and (max-width: 38rem) {
+  #all-projects .project .background-image {
+    height: 16rem;
+  }
+}
+#project-page-title h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 64px;
+  font-weight: 700;
+  color: black;
+  line-height: normal;
+  margin: 4rem 0 1rem;
+}
+#project-page-title h1 span {
+  font-family: "Raleway", sans-serif;
+  font-size: 40px;
+  font-weight: normal;
+  color: black;
+  line-height: normal;
+}
+#project-page-title p {
+  text-align: center;
+}
+
+#firstMotion {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding: 2rem 0 10rem;
+}
+#firstMotion .project {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+#firstMotion .project .background-image {
+  width: 25rem;
+  height: 15rem;
+}
+#firstMotion .project .text .title {
+  font-family: "Raleway", sans-serif;
+  font-size: 40px;
+  font-weight: 600;
+  color: black;
+  line-height: normal;
+  margin-bottom: 0.5rem;
+}
+#firstMotion .project .text .text {
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  color: black;
+  line-height: normal;
+}
+#firstMotion .backToHome {
+  border: 1px solid black;
+  border-radius: 100px;
+  padding: 0.5rem 2rem 0.5rem 2rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-decoration: unset;
+}
+
+@media screen and (max-width: 50rem) {
+  #project-page-title h1 {
+    margin-top: 2rem;
+  }
+  #firstMotion {
+    gap: 2.5rem;
+  }
+  #firstMotion .project {
+    gap: 2rem;
+  }
+}
+@media screen and (max-width: 38rem) {
+  #project-page-title h1 {
+    font-size: 48px;
+    margin: 1rem 0 0.5rem;
+  }
+  #firstMotion {
+    gap: 3rem;
+    padding-bottom: 6rem;
+  }
+  #firstMotion .project {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  #firstMotion .project .background-image {
+    width: 100%;
+    height: 14rem;
+  }
+  #firstMotion .project .text {
+    width: 100%;
+  }
+  #firstMotion .project .text .title {
+    font-family: "Raleway", sans-serif;
+    font-size: 26px;
+    font-weight: 600;
+    color: black;
+    line-height: normal;
+    margin-bottom: 0.25rem;
+    padding-left: 0.5rem;
+  }
+  #firstMotion .project .text .text {
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: black;
+    line-height: normal;
+    padding-left: 0.5rem;
+  }
+  #firstMotion .backToHome {
+    align-self: center;
+  }
+}
+@media screen and (min-width: 448px) and (max-width: 38rem) {
+  #firstMotion .project .background-image {
+    height: 16rem;
+  }
 }/*# sourceMappingURL=main.css.map */
