--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 @import 'scss/variables';
+@import 'scss/classes';
 @import 'scss/scrollbar';
 
 @import 'scss/general';
@@ -7,10 +8,8 @@
 
 @import 'scss/homepage/hero';
 @import 'scss/homepage/about';
-@import 'scss/homepage/photos';
 @import 'scss/homepage/projects';
 @import 'scss/homepage/contact';
 
 @import 'scss/projects/general';
-
 @import 'scss/projects/firstMotion';
