--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -1,3 +1,4 @@
+// ------<< VARIABLES >>------
 $black: black;
 $white: white;
 
@@ -6,7 +7,7 @@ $breakpoint-phone: 38rem;
 $breakpoint-large-screen: 100rem;
 
 
-
+// ------<< FONTS >>------
 @font-face {
     font-family: 'Raleway';
     src: url('/fonts/Raleway-VariableFont_wght.ttf');
@@ -17,4 +18,16 @@ $breakpoint-large-screen: 100rem;
     font-weight: $weight;
     color: $color;
     line-height: normal;
+}
+
+
+// ------<< PLACEHOLDER >>------
+%transition-entry {
+    transition-duration: .25s;
+    transition-timing-function: ease-out;
+}
+%transition-exit {
+    transition-delay: .1s;
+    transition-duration: .4s;
+    transition-timing-function: ease-in-out;
 }
