--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -9,7 +9,15 @@ header nav {
     justify-content: space-evenly;
     align-items: center;
     a {
+        position: relative;
+        height: 100%;
+        width: 14vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         text-decoration: unset;
+        overflow: hidden;
+        @extend %transition-exit;
     }
     button {
         display: none;
@@ -17,6 +25,31 @@ header nav {
         font-style: italic;
         margin-right: 5vw;
     }
+}
+
+header nav a::after {
+    z-index: -1;
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translateY(-100%);
+    height: 100%;
+    width: 100%;
+    border-bottom-left-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+    background: $black;
+    @extend %transition-exit;
+}
+
+header nav a:hover {
+    @extend %transition-entry;
+    color: $white;
+}
+header nav a:hover::after {
+    @extend %transition-entry;
+    transform: translateY(0);
 }
 
 
