--- a/css/scss/homepage/_contact.scss
+++ b/css/scss/homepage/_contact.scss
@@ -4,21 +4,61 @@
     border-bottom: 1px solid $black;
 
     a {
+        position: relative;
         display: flex;
         align-items: center;
         padding-left: 2rem;
         border-top: 1px solid $black;
         text-decoration: unset;
         @include font_raleway(28, 400);
+        overflow: hidden;
+        @extend %transition-exit;
+
+        span {
+            margin-right: 3rem;
+            @include font_raleway(96, 100);
+            @extend %transition-exit;
+        }
+
+        img {
+            margin-left: 3rem;
+            @extend %transition-exit;
+        }
     }
 
-    span {
-        margin-right: 3rem;
-        @include font_raleway(96, 100);
+    a:hover {
+        @extend %transition-entry;
+        color: $white;
+
+        span {
+            @extend %transition-entry;
+            color: $white;
+        }
+
+        img {
+            @extend %transition-entry;
+            filter: invert(100%);
+        }
     }
 
-    img {
-        margin-left: 3rem;
+    a::after {
+        z-index: -1;
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border-top-right-radius: 100rem;
+        border-bottom-right-radius: 100rem;
+        background: black;
+        transform: translateX(-100%);
+        @extend %transition-exit;
+    }
+    a:hover::after {
+        @extend %transition-entry;
+        transform: translateX(0%);
     }
 }
 
