--- a/css/scss/homepage/_hero.scss
+++ b/css/scss/homepage/_hero.scss
@@ -29,8 +29,19 @@
     height: 4rem;
     border: 3px solid $black;
     border-radius: 100%;
+    @extend %transition-exit;
     img {
         width: 2rem;
+        @extend %transition-exit;
+    }
+}
+
+.scrollCall:hover {
+    @extend %transition-entry;
+    background: $black;
+    img {
+        filter: invert(100%);
+        @extend %transition-entry;
     }
 }
 
