--- a/css/scss/_general.scss
+++ b/css/scss/_general.scss
@@ -3,8 +3,8 @@ html, html *, * * {
     scroll-behavior: smooth;
 }
 
-
 section {
+    position: relative;
     margin: 0 10vw 0 10vw;
 }
 @media screen and (max-width: $breakpoint-tablet) {
@@ -19,6 +19,12 @@ section {
     }
 }
 
+.particles-js {
+    position: absolute;
+    z-index: -10;
+    height: 100%;
+    filter: blur(30px);
+}
 
 h2 {
     @include font_raleway(48, 500);
@@ -29,7 +35,6 @@ button {
     border: unset;
     cursor: pointer;
 }
-
 
 .background-image {
     background-position: center;
