--- a/css/scss/homepage/_projects.scss
+++ b/css/scss/homepage/_projects.scss
@@ -55,7 +55,7 @@
 }
 #projects .card:first-child,
 #photos .card:first-child {
-    flex-grow: 1.3;
+    flex-grow: 1.2; // Ration entre les format des cartes de projets/photos
 }
 
 
