--- a/css/scss/homepage/_contact.scss
+++ b/css/scss/homepage/_contact.scss
@@ -1,97 +1,97 @@
 #contact {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
-    border-bottom: 1px solid $black;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  border-bottom: 1px solid $black;
 
-    a {
-        position: relative;
-        display: flex;
-        align-items: center;
-        padding-left: 2rem;
-        border-top: 1px solid $black;
-        text-decoration: unset;
-        @include font_raleway(28, 400);
-        overflow: hidden;
-        @extend %transition-exit;
+  a {
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding-left: 2rem;
+    border-top: 1px solid $black;
+    text-decoration: unset;
+    @include font_AlteGrotesk(28, 400);
+    overflow: hidden;
+    @extend %transition-exit;
 
-        span {
-            margin-right: 3rem;
-            @include font_raleway(96, 100);
-            @extend %transition-exit;
-        }
-
-        img {
-            margin-left: 3rem;
-            @extend %transition-exit;
-        }
+    span {
+      margin-right: 3rem;
+      @include font_AlteGrotesk(96, 100);
+      @extend %transition-exit;
     }
 
-    a:hover {
-        @extend %transition-entry;
-        color: $white;
+    img {
+      margin-left: 3rem;
+      @extend %transition-exit;
+    }
+  }
 
-        span {
-            @extend %transition-entry;
-            color: $white;
-        }
+  a:hover {
+    @extend %transition-entry;
+    color: $white;
 
-        img {
-            @extend %transition-entry;
-            filter: invert(100%);
-        }
+    span {
+      @extend %transition-entry;
+      color: $white;
     }
 
-    a::after {
-        z-index: -1;
-        content: "";
-        display: block;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        border-top-right-radius: 100rem;
-        border-bottom-right-radius: 100rem;
-        background: black;
-        transform: translateX(-100%);
-        @extend %transition-exit;
+    img {
+      @extend %transition-entry;
+      filter: invert(100%);
     }
-    a:hover::after {
-        @extend %transition-entry;
-        transform: translateX(0%);
-    }
+  }
+
+  a::after {
+    z-index: -1;
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-top-right-radius: 100rem;
+    border-bottom-right-radius: 100rem;
+    background: black;
+    transform: translateX(-100%);
+    @extend %transition-exit;
+  }
+  a:hover::after {
+    @extend %transition-entry;
+    transform: translateX(0%);
+  }
 }
 
 @media screen and (max-width: $breakpoint-tablet) {
-    #contact {
-        span {
-            margin-right: 2.5rem;
-            @include font_raleway(80, 100);
-        }
-        a {
-            padding-left: 2rem;
-            @include font_raleway(26, 400);
-        }
-        img {
-            margin-left: 2.5rem;
-            scale: .9;
-        }
+  #contact {
+    span {
+      margin-right: 2.5rem;
+      @include font_AlteGrotesk(80, 100);
     }
+    a {
+      padding-left: 2rem;
+      @include font_AlteGrotesk(26, 400);
+    }
+    img {
+      margin-left: 2.5rem;
+      scale: 0.9;
+    }
+  }
 }
 
 @media screen and (max-width: $breakpoint-phone) {
-    #contact {
-        span {
-            margin-right: 2rem;
-            @include font_raleway(64, 100);
-        }
-        a {
-            padding-left: 1.5rem;
-            @include font_raleway(24, 400);
-        }
-        img {
-            margin-left: 2rem;
-            scale: .8;
-        }
+  #contact {
+    span {
+      margin-right: 2rem;
+      @include font_AlteGrotesk(64, 100);
     }
+    a {
+      padding-left: 1.5rem;
+      @include font_AlteGrotesk(24, 400);
+    }
+    img {
+      margin-left: 2rem;
+      scale: 0.8;
+    }
+  }
 }
