--- a/css/scss/homepage/_hero.scss
+++ b/css/scss/homepage/_hero.scss
@@ -1,58 +1,59 @@
 #hero {
-    position: relative;
-    margin-top: 4rem;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 2rem;
+  position: relative;
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 2rem;
 }
 
-#hero div { // text
-    h1 {
-        @include font_raleway(64, 700);
-        margin-bottom: 1rem;
-    }
+#hero div {
+  // text
+  h1 {
+    @include font_AlteGrotesk(64, 700);
+    margin-bottom: 1rem;
+  }
 }
 
 #hero img {
-    height: 30rem;
+  height: 30rem;
 }
 
 .scrollCall {
-    position: relative;
-    margin: auto auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    border: 3px solid $black;
-    border-radius: 100%;
+  position: relative;
+  margin: auto auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  border: 3px solid $black;
+  border-radius: 100%;
+  @extend %transition-exit;
+  img {
+    width: 2rem;
     @extend %transition-exit;
-    img {
-        width: 2rem;
-        @extend %transition-exit;
-    }
+  }
 }
 
 .scrollCall:hover {
+  @extend %transition-entry;
+  background: $black;
+  img {
+    filter: invert(100%);
     @extend %transition-entry;
-    background: $black;
-    img {
-        filter: invert(100%);
-        @extend %transition-entry;
-    }
+  }
 }
 
 @media screen and (max-width: $breakpoint-tablet) {
-    #hero {
-        flex-direction: column;
-        div {
-            text-align: center;
-        }
+  #hero {
+    flex-direction: column;
+    div {
+      text-align: center;
     }
-    .scrollCall {
-        display: none;
-    }
+  }
+  .scrollCall {
+    display: none;
+  }
 }
