--- a/css/scss/homepage/_projects.scss
+++ b/css/scss/homepage/_projects.scss
@@ -1,112 +1,109 @@
 // ------<< SECTIONS >>------
 #projects,
 #photos {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 
-    h2 {
-        text-align: center;
-    }
+  h2 {
+    text-align: center;
+  }
 
-    .cta {
-        width: fit-content;
-        align-self: center;
-    }
+  .cta {
+    width: fit-content;
+    align-self: center;
+  }
 }
 #photos {
-    margin-bottom: 10rem;
+  margin-bottom: 10rem;
 }
-
 
 // ------<< CARD CONTAINER >>------
 #projects .container,
 #photos .container {
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 2rem;
-    width: 100%;
-    height: 18rem;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+  width: 100%;
+  height: 18rem;
 }
 #projects .container:nth-last-child(2),
 #photos .container:nth-last-child(1) {
-    flex-direction: row;
+  flex-direction: row;
 }
 
 // ------<< CARD >>------
 #projects .card,
 #photos .card {
-    position: relative;
-    flex-grow: 1;
-    border-radius: 2rem;
-    overflow: hidden;
-    filter: grayscale(100%);
-    p {
-        z-index: 1;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        color: $white;
-        padding: 0 2rem 1rem 1rem;
-        span {
-            @include font_raleway(24, 700, $white);
-        }
+  position: relative;
+  flex-grow: 1;
+  border-radius: 2rem;
+  overflow: hidden;
+  filter: grayscale(100%);
+  p {
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    color: $white;
+    padding: 0 2rem 1rem 1rem;
+    span {
+      @include font_AlteGrotesk(24, 700, $white);
     }
+  }
 }
 #projects .card:first-child,
 #photos .card:first-child {
-    flex-grow: 1.2; // Ration entre les format des cartes de projets/photos
+  flex-grow: 1.2; // Ration entre les format des cartes de projets/photos
 }
-
 
 // -----------------------------------
 // ------------<< HOVER >>------------
 // -----------------------------------
 #projects .card::after,
-#photos .card::after{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 30%;
-    background: $black;
-    transform: translateY(100%);
-    @extend %transition-exit;
+#photos .card::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 30%;
+  background: $black;
+  transform: translateY(100%);
+  @extend %transition-exit;
 }
 #projects .card:hover::after,
-#photos .card:hover::after{
-    transform: translateY(0%);
-    @extend %transition-entry;
+#photos .card:hover::after {
+  transform: translateY(0%);
+  @extend %transition-entry;
 }
-
 
 // -----------------------------------
 // ------------<< MEDIA >>------------
 // -----------------------------------
 @media screen and (max-width: $breakpoint-tablet) {
-    #projects,
-    #photos {
-        gap: 1rem;
-        .container {
-            gap: 1rem;
-        }
+  #projects,
+  #photos {
+    gap: 1rem;
+    .container {
+      gap: 1rem;
     }
+  }
 }
 @media screen and (max-width: $breakpoint-phone) {
-    #projects,
-    #photos {
-        gap: 1rem;
-        .container {
-            flex-direction: column !important;
-            gap: 1rem;
-        }
-        .card {
-            flex-grow: 1 !important;
-        }
+  #projects,
+  #photos {
+    gap: 1rem;
+    .container {
+      flex-direction: column !important;
+      gap: 1rem;
     }
-    #projects .card::after,
-    #photos .card::after{
-        height: 40%;
+    .card {
+      flex-grow: 1 !important;
     }
+  }
+  #projects .card::after,
+  #photos .card::after {
+    height: 40%;
+  }
 }
